--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
+    <TextureView
+        android:id="@+id/videoView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
